--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.coolweather.app.activity.WeatherActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            ></activity>
     </application>
 
 </manifest>
